# Audax

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/icons/: README.md
docs/: index.html
docs/assets/: styles.css
installer/: README.md
installer/assets/: README.md
installer/scripts/: build_msi.ps1  stage_release.sh
installer/wix/: Product.wxs  wix.toml
src/: app.rs  main.rs  package.rs
src/canvas/: brush.rs  layer.rs  mod.rs
src/export/: jpg.rs  mod.rs  png.rs  psd.rs
src/input/: mod.rs  palm_rejection.rs  surface_pen.rs  windows_ink.rs
src/tools/: arrows.rs  mod.rs  selection.rs  shape_helpers.rs  transform.rs
src/ui/: brush_editor.rs  color_palette.rs  icon.rs  menu.rs  mod.rs
